# sync-chat

./: .gitignore  README.md
Client/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  main.cpp
